# matrix-e2ee-bot-template

./: .gitignore  Cargo.toml  README.md  flake.nix  run.fish  shell.nix
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
src/: client.rs  config.rs  encryption.rs  handlers.rs  main.rs
