[package]
name = "matrix-bot-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
futures-util = "0.3.32"
matrix-sdk = { version = "0.16.0", features = [
    "anyhow",
    "e2e-encryption",
    "markdown",
    "sqlite",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
